syntax = "proto3";
package dydxprotocol.prices;

option go_package = "github.com/dydxprotocol/v4/x/prices/types";

// ExchangeFeed defines a single price feed for a given asset price
message ExchangeFeed {

  // Unique, sequentially-generated.
  uint32 id = 1;

  // The name of the exchange feed (e.g. CoinbasePro).
  string name = 2;

  // A full in-English description of how to query the exchange.
  string memo = 3;
}
